--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,20 +1,40 @@
-AllCops:
-  RunRailsCops: true
-  Exclude:
-    - bin/**
-    - .bundle/**
+require: rubocop-rspec
 
-Documentation:
+AllCops:
+  RunRailsCops: false
+  DisplayCopNames: true
+  Exclude:
+    - bin/**/*
+
+Style/Documentation:
   Description: 'Document classes and non-namespace modules.'
   Enabled: false
 
-SymbolArray:
+Style/MethodCalledOnDoEndBlock:
+  Enabled: true
+
+Style/CollectionMethods:
+  Enabled: true
+
+Style/SymbolArray:
   Description: 'Use %i or %I for arrays of symbols.'
   Enabled: true
 
-AlignParameters:
-  Enabled: false
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
 
-LineLength:
+Metrics/LineLength:
   Description: 'Limit lines to 120 characters.'
   Max: 120
+
+Lint/EndAlignment:
+  AlignWith: variable
+  SupportedStyles:
+    - keyword
+    - variable
+
+Style/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
+  SupportedStyles:
+    - with_first_parameter
+    - with_fixed_indentation
