--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,11 +29,12 @@ Metrics/LineLength:
   Description: 'Limit lines to 120 characters.'
   Max: 120
 
-Lint/EndAlignment:
-  AlignWith: variable
-  SupportedStyles:
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: variable
+  SupportedStylesAlignWith:
     - keyword
     - variable
+    - start_of_line
 
 Style/AlignParameters:
   EnforcedStyle: with_fixed_indentation
